# SEIS

./: .env.example  docker-compose.yml  flowchart.puml  pyproject.toml  readme.md  state-machine.puml
.github/workflows/: ruff-format.yml
Controller/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run-controller.sh
Controller/src/: test.py
Controller/src/turtleBot/: __init__.py  lidar.py  lidar_data.txt  mqtt_client.py  occupancy_map.py  process.py  racks.py  scheduler.py  turtleBot.py  turtleBotStateMachine.py
TLA/: aisleChecker.tla
Webots/protos/: Rack.proto
Webots/worlds/: .project-seis.wbproj  Rack.proto  project-seis.wbt
backend-server/: .gitignore  Dockerfile  pyproject.toml
backend-server/backend/: db.sqlite3  schema.json
backend-server/backend/backend/: settings.py  urls.py
backend-server/mqtt/: __init__.py  mqtt_client.py
backend-server/mqtt/logic/: racks.py  task_schedular.py
mqtt_broker/mosquitto/config/: mosquitto.conf
seis-dashboard/: Dockerfile  implementation.md  package.json  svelte.config.js
seis-dashboard/src/: app.css  hooks.server.ts
seis-dashboard/src/lib/components/: JobList.svelte  JobRow.svelte
seis-dashboard/src/lib/server/: backendClient.ts  mqtt-client.ts
seis-dashboard/src/lib/types/: schema.d.ts
seis-dashboard/src/routes/: +page.server.ts  +page.svelte
