[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pathfinding>=1.0.16",
    "ruff>=0.9.9",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]
